setup A_Star_Variant for further work

--- a/Artefakte/RapidPrototypes/ThreeJS_RapidPrototype/ThreeJS_RapidPrototype_A_Star_Variant/code/index.html
+++ b/Artefakte/RapidPrototypes/ThreeJS_RapidPrototype/ThreeJS_RapidPrototype_A_Star_Variant/code/index.html
@@ -13,6 +13,10 @@
   </head>
   <body>
     <div id="3dMap"></div>
+    <script src="lib/UtilFunctions.js"></script>
+    <script src="lib/PathMeshClasses.js"></script>
+    <script src="lib/ImportPathMesh.js"></script>
+    <script src="lib/FindPath.js"></script>
     <script src="lib/three.js"></script>
     <script src="lib/OrbitControls.js"></script>
     <script src="lib/OBJLoader.js"></script>
